Update the z-index of image for fixing navigation bug

--- a/css/main.css
+++ b/css/main.css
@@ -473,7 +473,6 @@ a{
     
     .pic img{
         top: 0;
-        z-index: 1;
     }
     
     .hide-mobile{
